# event_channel

./: CMakeLists.txt  LICENSE  README.md  annotated.html  classes.html  classevent__channel_1_1channel-members.html  classevent__channel_1_1channel.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_138aff360eb965c43b94267b8d1ce09e_dep.map  dir_138aff360eb965c43b94267b8d1ce09e_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  event__channel_8h.html  event__channel_8h__incl.map  event__channel_8h__incl.md5  event__channel_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  mainpage_8h_source.html  namespaceevent__channel.html  namespaceevent__channel_1_1detail.html  namespaceevent__channel_1_1dispatch__policy.html  namespaceevent__channel_1_1idle__policy.html  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  structevent__channel_1_1dispatch__policy_1_1parallel-members.html  structevent__channel_1_1dispatch__policy_1_1parallel.html  structevent__channel_1_1dispatch__policy_1_1sequential-members.html  structevent__channel_1_1dispatch__policy_1_1sequential.html
documentation/: CMakeLists.txt  Doxyfile.in  mainpage.h
examples/: CMakeLists.txt  example.cpp
include/: CMakeLists.txt  event_channel.h
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_3.js  typedefs_4.js  variables_0.js
tests/: CMakeLists.txt  catch.hpp  correctness.cpp  semaphore.hpp
